--- a/src/generic/dune
+++ b/src/generic/dune
@@ -17,6 +17,7 @@
     criterion.fwk criterion.order_reduced
     criterion.sla criterion.vla 
     criterion.flat_cycles criterion.flat_cycles.generalized
+    criterion.descending_unicycles
     criterion.sprenger_dam criterion.no_flat_extended_cycles
     criterion.soundness)
   (flags :standard -xc++ -std=c++17 (:include c_flags.sexp))
