--- a/benchmarks/fo/Makefile
+++ b/benchmarks/fo/Makefile
@@ -7,12 +7,12 @@ CMD := "src/firstorder/prove.exe"
 
 all: $(TESTS)
 
-
 $(TESTS): %.tst:
 	-@TST_COUNT=1; \
 	TST_NAME=$@; \
 	while read -r SEQ; do \
-		echo "test case: first-order-$${TST_NAME%.tst}.$$TST_COUNT"; \
+		TST_CASE="first-order-$${TST_NAME%.tst}.$$TST_COUNT"; \
+		echo "test case: $$TST_CASE"; \
 		TST_COUNT=$$(($$TST_COUNT+1)); \
-		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- $(TST_OPTS) -t $(TIMEOUT) -S "$$SEQ" || echo "Not proved (timeout)") ;\
+		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- -D $(DEFS) -t $(TIMEOUT) -S "$$SEQ" --id="$$TST_CASE" $(TST_OPTS) || echo "Not proved (timeout)"); \
 	done < "$@"
