update test makefile

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -25,10 +25,10 @@ all: soundness tests
 soundness: main.o sloped_relation.o heighted_graph.o graph.o criterion.soundness.o criterion.process_based.o criterion.flat_cycles.o criterion.descending_unicycles.o criterion.trace_manifold.o directed_graph.o sledgehammer.o
 	g++ -g main.o sloped_relation.o heighted_graph.o graph.o criterion.soundness.o criterion.process_based.o criterion.flat_cycles.o criterion.descending_unicycles.o criterion.trace_manifold.o directed_graph.o sledgehammer.o `pkg-config --libs libspot libbddx` -pthread -o soundness
 
-get_graphs_stats: get_graphs_stats.o sloped_relation.o heighted_graph.o graph.o heighted_graph_parser.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o
-	g++ -g -o get_graphs_stats get_graphs_stats.o sloped_relation.o heighted_graph.o graph.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o `pkg-config --libs libspot libbddx`
+get_graphs_stats: get_graphs_stats.o sloped_relation.o heighted_graph.o graph.o heighted_graph_parser.o criterion.soundness.o criterion.process_based.o criterion.flat_cycles.o criterion.descending_unicycles.o criterion.trace_manifold.o directed_graph.o sledgehammer.o
+	g++ -g -o get_graphs_stats get_graphs_stats.o sloped_relation.o heighted_graph.o graph.o criterion.soundness.o criterion.process_based.o criterion.flat_cycles.o criterion.descending_unicycles.o criterion.trace_manifold.o directed_graph.o sledgehammer.o `pkg-config --libs libspot libbddx`
 
-get_graphs_stats.o: get_graphs_stats.cpp ../heighted_graph.hpp ./heighted_graph_parser.cpp ../criterion.descending_unicycles.c ../criterion.trace_manifold.c
+get_graphs_stats.o: get_graphs_stats.cpp ../heighted_graph.hpp ./heighted_graph_parser.cpp ../criterion.descending_unicycles.hpp ../criterion.trace_manifold.hpp
 	g++ ${CFLAGS} `pkg-config --cflags libspot libbddx` -I ../ -g -c get_graphs_stats.cpp -o get_graphs_stats.o
 
 run_on_graphs: run_on_graphs.o sloped_relation.o heighted_graph.o graph.o heighted_graph_parser.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o
@@ -36,6 +36,11 @@ run_on_graphs: run_on_graphs.o sloped_relation.o heighted_graph.o graph.o height
 
 run_on_graphs.o: run_on_graphs.cpp ../heighted_graph.hpp ./heighted_graph_parser.cpp
 	g++ ${CFLAGS} `pkg-config --cflags libspot libbddx` -I ../ -g -c run_on_graphs.cpp -o run_on_graphs.o
+
+test_methods: test_methods.o heighted_graph.o sloped_relation.o criterion.trace_manifold.o criterion.soundness.o 
+	g++ -g -o test_methods test_methods.o heighted_graph.o sloped_relation.o criterion.trace_manifold.o criterion.soundness.o  `pkg-config --libs libspot libbddx`
+test_methods.o: test_methods.cpp ../heighted_graph.hpp ../criterion.trace_manifold.hpp 
+	g++ ${CFLAGS} `pkg-config --cflags libspot libbddx` -I ../ -g -c test_methods.cpp -o test_methods.o
 
 main.o: main.cpp \
 	../heighted_graph.hpp ./heighted_graph_parser.cpp \
@@ -121,7 +126,8 @@ clean:
 
 run-get-graphs-stats: get_graphs_stats
 	# ./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs/sl'
-	./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs/fo/minimized'
+	# ./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs/fo/minimized'
+	./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs/fo'
 
 	# ./get_graphs_stats ../../../../cyclist_graphs/unminimized/sl
 	# ./get_graphs_stats ./loops_tests
@@ -166,6 +172,10 @@ tests-sla:
 tests-vla:
 	echo "VLA"
 	export SPEC=V; make -s test-suite-full
+
+tests-tm:
+	echo "TRACE MANIFOLD"
+	export SPEC="M"; make -s test-suite-full; 
 
 tests-sh:
 	echo "SLEDGEHAMMER"
