update paths in readme, remove flag from dune file and fix run-get-graphs-stats script

--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -125,7 +125,8 @@ clean:
 	rm -f ./*.o soundness
 
 run-get-graphs-stats: get_graphs_stats
-	@./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs' 3
+	./get_graphs_stats $(GRAPHS_DATABASE_PATH) 3
+	# ./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs' 3
 	# ./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs/sl'
 	# ./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs/fo'
 	# ./get_graphs_stats '/Users/matanshaked/M.Sc research/Thesis/cyclist_graphs/cyclist_output_graphs/fo/minimized'
