--- a/src/generic/dune
+++ b/src/generic/dune
@@ -30,7 +30,7 @@
  (public_name checkproof)
  (modules checkproof)
  (libraries generic)
- (ocamlopt_flags :standard -cc clang++))
+ (ocamlopt_flags :standard))
 
  (rule
   (targets c_flags.sexp c_library_flags.sexp)
