Small fixes to Dockerfile.

--- a/Dockerfile.Cyclone
+++ b/Dockerfile.Cyclone
@@ -17,6 +17,8 @@ RUN apt-get --allow-releaseinfo-change update && apt-get install -y --no-install
   file \
   rlwrap \
   wget \
+  # Python packages for creating figures
+  python3-numpy python3-pandas python3-matplotlib python3-seaborn \
 && sudo rm -rf /var/lib/apt/lists/*
 
 # Install Spot
@@ -29,28 +31,24 @@ RUN \
                      libspotgen0=2.11.6.0-1 libspotltsmin0=2.11.6.0-1 \
                      libspot0=2.11.6.0-1 spot=2.11.6.0-1 libspot-dev=2.11.6.0-1
 
-# Install python packages for creating figures
-
-RUN sudo apt-get update && sudo apt-get install python3-numpy python3-pandas python3-matplotlib python3-seaborn -y
-
-
 # Copy Cyclist source code from current directory
 
 COPY . /home/cyclist
 
-# Uncomment to copy database as well
-# COPY ./cyclist_graphs/cyclist_output_graphs /home/sloped_graphs
+# Copy the Cyclone scripts outside the cyclist directory
 
 COPY ./cyclone_artifact_scripts/cyclone.readme.md /home/README.md
 COPY ./cyclone_artifact_scripts/cyclone.evaluate_cyclone.sh /home/scripts/evaluate_cyclone.sh
 COPY ./cyclone_artifact_scripts/cyclone.generate_database.sh /home/scripts/generate_database.sh
 COPY ./cyclone_artifact_scripts/cyclone.graphs_stats.sh /home/scripts/graphs_stats.sh
 COPY ./cyclone_artifact_scripts/create_figures.py /home/scripts/create_figures.py
+
 RUN mkdir /home/figures
 
 RUN \
   chmod -R a+rw /home/cyclist && \
   chmod -R a+rw /home/scripts && \
+  chmod -R a+rw /home/figures && \
   chmod a+rw /home
 
 USER opam
